gicallableinfo: Add two new convenience methods: is_method and can_throw_gerror

https://bugzilla.gnome.org/show_bug.cgi?id=673805